# light-LPR

./: CMakeLists.txt  README.md  cn-tw.md  cn-zh.md  en.md  install.md  install_en.md  kr.md
include/mlpdr/: MLPDR.h  label.hpp
lib-win32/: MNN.lib
models/: MNNConvert  det1.mnn  det2.mnn  lpc.mnn  lpr.mnn
src/examples/: CMakeLists.txt  demo.cpp
src/mlpdr/: CMakeLists.txt  MLPDR.cpp  java_api.cpp
